fix: make job select readable when content is behind it
Fixes #14

--- a/src/app/modules/toolbar/components/class-job-selection/class-job-selection.component.scss
+++ b/src/app/modules/toolbar/components/class-job-selection/class-job-selection.component.scss
@@ -1,6 +1,7 @@
+@import "mixins.scss";
+
 :host {
   position: relative;
-  background: rgba(0, 0, 0, 0.2);
   padding-right: 12px;
   display: flex;
 }
@@ -40,6 +41,7 @@
     color: white;
     align-items: center;
     cursor: pointer;
+    @include blur-background();
 
     &:nth-child(odd) {
       background: rgba(50, 50, 50, .6);
